5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1664_1397.log
== TEST (2019-04-16 10:09:46) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000)
	msg = 5.00 * a
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- ERROR:
File "XXXX", line 3
    if(a <= 10000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:09:57) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000)
	msg = 5.00 * a
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- ERROR:
File "XXXX", line 3
    if(a <= 10000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:08) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000)
	msg = 5.00 * a
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- ERROR:
File "XXXX", line 3
    if(a <= 10000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:10:17) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000)
	msg = 5.00 * a
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- ERROR:
File "XXXX", line 3
    if(a <= 10000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:19) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000)
	msg = (5.00 * a)
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- ERROR:
File "XXXX", line 3
    if(a <= 10000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:39) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000)
	msg = (5.00 * a)
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- ERROR:
File "XXXX", line 3
    if(a <= 10000)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:11:50) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000):
	msg = (5.00 * a)
else:
	msg = (5.00 * 10.000) + (4 * a)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:04) 
-- CODE:
a = int(input("area a ser fertilizada: "))

if(a <= 10000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (10.000 - a)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:14:29) 
-- CODE:
a = int(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (10.000 - a)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
4594.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:15:24) 
-- CODE:
a = int(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (a - 10.000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
40946.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:06) 
-- CODE:
a = int(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (a - 10.000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
40946.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:15) 
-- CODE:
a = int(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (a - 10.000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
40946.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:34) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (a - 10.000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
40946.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:46) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (a - 10.000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
40946.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:17:57) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10.000):
	msg = (5.00 * a)
else:
	msg = (5.00 * a) + 4.00 * (a - 10.000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
40946.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:11) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000):
	msg = (5 * a)
else:
	msg = (5 * a) + 4 * (a - 10000)
	
r = round(msg, 2)
print(r)
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:18:38) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000):
	msg = (5 * a)
else:
	msg = (5 * a) + (4 * (a - 10000))
	
r = round(msg, 2)
print(r)
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:19:22) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000):
	msg = (5 * a)
else:
	msg = (5 * 10000) + (4 * (a - 10000))
	
r = round(msg, 2)
print(r)
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:19:29) 
-- CODE:
a = float(input("area a ser fertilizada: "))

if(a <= 10000):
	msg = (5 * a)
else:
	msg = (5 * 10000) + (4 * (a - 10000))
	
r = round(msg, 2)
print(r)
-- EXECUTION TIME:
0.14149
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
22770.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
82860.0
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
45000.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
